--- a/usa/usa sub 20240518_02.html
+++ b/usa/usa sub 20240518_02.html
@@ -123,12 +123,23 @@
 
 
 
+        <h3><a href="https://www.blockmedia.co.kr/archives/540512" target="_blank">  2024년5월18일 : BLOCK MEDIA : 은 가격 온스당 30달러 돌파, 2013년 이후 최고치…금, 비트코인 일제히 랠리 </a></h3>
+        금, 은, 비트코인이 동시에 랠리를 펼치고 있다. 은 가격은 온스당 30달러를 돌파하여 2013년 이후 최고치를 기록했으며, 금은 2400달러대를 돌파했고, 비트코인은 6만7000달러를 바라보고 있다. 17일(현지 시간) 뉴욕시장에서 은은 6.5% 상승하여 온스당 31.49달러에 거래를 마쳤다. 이는 2013년 2월 이후 가장 높은 가격이다. 올해 들어 은 가격은 32% 상승하며 금을 능가하며 주요 상품 중 최고의 성과를 보였다.<br><br>
+        은 가격 상승은 투자자의 관심 증가와 우호적인 거시경제 상황에서 이루어졌다. 금요일의 가격 상승은 금속 시장 전반의 긍정적 분위기 덕분에 가속화됐다. 필 스트리블(Phil Streible) 블루 라인 퓨처스(Blue Line Futures) 최고 시장 전략가는 “이번 주는 일종의 밈 주식 재현이었다”며 “투기자들이 자연스럽게 다른 분야를 찾게 되고, 은은 그들이 선호하는 대상 중 하나”라고 말했다.<br><br>
+        은은 2021년 레딧 소매 거래자들의 주요 대상이 되었으며, 당시 게임스탑과 다른 소형 주식에 대한 매수 광풍을 일으켰다. TD 증권(TD Securities) 수석 상품 전략가 다니엘 갈리(Daniel Ghali)에 따르면 은 가격이 30달러를 돌파하면 상장지수펀드(ETF)들의 대규모 매수 활동을 촉발할 수 있으며, 이는 은의 공급 부족 위험을 증가시킬 수 있다.<br><br>
+        블룸버그(Bloomberg) 데이터에 따르면, 목요일 기준으로 실물 은 ETF 보유량은 1.7% 감소하며 투자자들은 여전히 순매도 중이다. 5월 14일로 끝나는 주간에는 자산 관리자들이 코멕스(Comex) 은 선물에 대한 매수 포지션을 2년 만에 최고치로 늘렸다. 이들이 보유한 총 공매도는 총 개방 이자의 11%를 차지했다.<br><br>
+        은의 상승세가 금을 능가했음에도 불구하고 가격 측면에서는 여전히 금보다 저렴하다는 분석이 나오고 있다. 두 귀금속은 유사한 거시경제, 대체 투자 자산으로서의 특성으로 인해 대체로 동반 상승한다. 중앙은행의 매입, 중국의 소매 관심, 미국 금리 인하에 대한 기대 등으로 금이 최고치를 기록하며, 은도 동반 상승했다.<br><br>
+        은 ETF에 대한 투자자의 관심은 거의 없었지만, 싱가포르 기반 딜러 실버 불리언 Pte(Silver Bullion Pte)와 같은 곳에서는 실물 판매가 증가했다. 은은 금융자산으로서의 가치와 산업용 소재로서의 이중적 성격을 지니고 있다. 특히 청정에너지 기술 분야에서 중요한 재료로, 태양광 패널의 핵심 성분이다. 이 산업의 강력한 성장과 함께 올해 은 사용량은 사상 최고치를 기록할 것으로 예상된다.<br><br>
 
 
-
-
-
-
+        <h3><a href="https://www.sedaily.com/NewsView/2D982LVX6D" target="_blank">  2024년5월17일 : 서울경제 : 금·은 등 귀금속 '다이아몬드' 가격 되겠네… </a></h3>
+        미국 연방준비제도(Fed·연준)의 금리 인하 기대감이 높아지면서 금과 은, 백금 등 귀금속 가격이 상승세를 이어가고 있다. 전문가들은 금 가격이 곧 온스당 2400달러에 도달하는 등 사상 최고치를 경신할 가능성이 있다고 전망하고 있다.<br><br>
+        CNBC 방송에 따르면, 미국 인플레이션 지표가 예상보다 낮게 나오면서 연준이 조기에 금리를 내릴 수 있다는 기대감이 커지고 있다. 이에 따라 금 등 귀금속 가격이 상승세를 보이고 있다. 금 가격은 15일 3주 만에 최고치를 기록했으며, 16일 오후 소폭 조정되어 온스당 2382달러에 거래됐다.<br><br>
+        은 현물 가격은 15일 장중에 온스당 29.73달러까지 올랐다가 소폭 하락해 16일 온스당 29.54달러에 거래됐다. 이는 2021년 2월 이후 가장 높은 수준이다. 백금은 15일 2.4% 상승한 데 이어 16일에도 0.7% 올라 온스당 1077달러를 기록했다. 이는 거의 1년 만의 최고치다.<br><br>
+        덴마크 투자은행 삭소방크는 최근 보고서에서 금값이 곧 온스당 2400달러 수준을 넘볼 가능성이 있다고 전망했다. 은은 온스당 30달러까지 오를 수 있으며, 백금도 1130달러까지 상승할 가능성이 있다고 밝혔다. 삭소방크는 "올해는 금속의 해"라며 최근 몇 주 동안 이 테마가 계속해서 추진력을 얻고 있다고 평가했다.<br><br>
+        ROTH 캐피탈 파트너스의 JC 오하라 기술전략팀장도 금과 은 가격이 앞으로 몇 달 동안 더 오를 것으로 예상했다. 그는 "금 가격이 더 올라 4월에 기록한 최근 고점을 돌파할 것으로 보이며, 목표가를 2600달러로 설정할 수 있다"고 말했다. 또한 "은의 경우 30달러를 넘어서면 35~37달러 정도까지는 저항이 거의 없을 것"이라고 예상했다.<br><br>
+        금 등의 가격 전망을 긍정적으로 보는 이유는 금리 하락 가능성과 관련이 있다. 일반적으로 '안전자산'으로 평가되는 금은 은과 마찬가지로 금리에 반비례하는 경향이 있다. 즉, 귀금속은 이자를 지급하지 않기 때문에 금리가 높아지면 이자를 주는 채권 등에 비해 매력이 떨어져 수요가 감소한다.<br><br>
+        그러나 금에 대한 강세 예측만 있는 것은 아니다. 네덜란드 은행 ING의 상품 전략가 에와 만티는 이달 초 발표한 리서치 노트에서 "연준이 신중한 접근을 계속하고 있으며 지정학적 상황도 이미 현재 가격에 반영돼 있기 때문에 이번 분기 금값은 약세를 보일 것"이라고 예상했다. 그는 2분기 금 가격이 온스당 평균 2250달러, 올해 평균 2218달러가 될 것으로 전망했다.<br><br>
 
 
 
