--- a/AI_News.html
+++ b/AI_News.html
@@ -199,8 +199,8 @@
 
         <li id="title12" class="larger-text">
           <strong>OpenAI의 최신 AI 챗봇 모델인 GPT-4o가 출시</strong><br>   
-          <a href="ai_news/news/AI_News sub 20240513_01.html" target="_blank"> 2024년5월13일 월요일 뉴스 바로가기<br><br>
-          <img src="image/ai_news/ai news sub 20240514_01.jpeg" alt="OpenAI의 최신 AI 챗봇 모델인 GPT-4o가 출시" width="100%">
+          <a href="ai_news/news/AI_News sub 20240520_01.html" target="_blank"> 2024년5월13일 월요일 뉴스 바로가기<br><br>
+          <img src="image/ai_news/20240520 ChatGPT4o 3.png" alt="OpenAI의 최신 AI 챗봇 모델인 GPT-4o가 출시" width="100%">
           </a>
         </li>
 
