--- a/index.html
+++ b/index.html
@@ -156,6 +156,13 @@
 
     const updates = [
     { 
+        title: "AI News", 
+        date: "2024년 5월 20일 Chat GPT4o", 
+        image: "image/ai_news/20240520 ChatGPT4o 1.png", 
+        titleLink: "AI_News.html", 
+        imageLink: "ai_news/news/AI_News sub 20240520_01.html" 
+      },
+    { 
         title: "AI 로봇", 
         date: "2024년 5월 19일 휴머로이드 AI 로봇", 
         image: "image/robot/20240519_robot0.jpg", 
