--- a/index.html
+++ b/index.html
@@ -157,6 +157,13 @@
     const updates = [
     { 
         title: "AI News", 
+        date: "2024년 5월 20일 Google I/O 2024", 
+        image: "image/ai_news/20240520 Google 1.png", 
+        titleLink: "AI_News.html", 
+        imageLink: "ai_news/news/AI_News sub 20240520_02.html" 
+      },
+    { 
+        title: "AI News", 
         date: "2024년 5월 20일 Chat GPT4o", 
         image: "image/ai_news/20240520 ChatGPT4o 1.png", 
         titleLink: "AI_News.html", 
