--- a/AI_News.html
+++ b/AI_News.html
@@ -175,6 +175,7 @@
       <ul>
 
 
+        <li><a href="#title13">Google I/O 2024</a></li>
         <li><a href="#title12">OpenAI의 최신 AI 챗봇 모델인 GPT-4o가 출시</a></li>
         <li><a href="#title11">초고속, 초정밀 움직임을 보여주는 휴머노이드 로봇 영상이 화제</a></li>
         <li><a href="#title10">마이크로소프트, 미세조정 없이 성능 개선된 'Phi-3' 언어모델 공개</a></li>
@@ -195,7 +196,12 @@
     <section>
       <ul>
 
-
+        <li id="title13" class="larger-text">
+          <strong>Google I/O 2024</strong><br>   
+          <a href="ai_news/news/AI_News sub 20240520_02.html" target="_blank"> 2024년5월13일 월요일 뉴스 바로가기<br><br>
+          <img src="image/ai_news/20240520 Google 1.png" alt="Google I/O 2024" width="100%">
+          </a>
+        </li>
 
         <li id="title12" class="larger-text">
           <strong>OpenAI의 최신 AI 챗봇 모델인 GPT-4o가 출시</strong><br>   
