--- a/index.html
+++ b/index.html
@@ -156,6 +156,13 @@
 
     const updates = [
     { 
+        title: "미국 생활", 
+        date: "2024년 5월 20일 미국경찰", 
+        image: "image/usa/20240520 Police 1.png", 
+        titleLink: "usa.html", 
+        imageLink: "usa/usa sub 20240520_01.html" 
+      },
+    { 
         title: "AI News", 
         date: "2024년 5월 20일 Google I/O 2024", 
         image: "image/ai_news/20240520 Google 1.png", 
