--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
     .update img {
     width: 100%;
-    max-width: 1800px; /* 최대 폭을 3배로 증가 */
-    height: auto;
+    max-width: 600px; /* 최대 폭을 3배로 증가 */
+    height: 400px;
     object-fit: cover;
     border-radius: 5px;
     margin: 1rem 0;
