--- a/usa/usa sub 20240520_01.html
+++ b/usa/usa sub 20240520_01.html
@@ -114,7 +114,7 @@
             <h2>2024년5월18일 (미국 경찰)</h2>
         
         <p>
-        <img src="../../image/usa/20240518_livingcost.png" alt="livingcost" width="100%">
+        <img src="../../image/usa/20240520 Police 1.png" alt="livingcost" width="100%">
 
         
         <span style="color: #2205c9;"><strong>  </strong></span>
