--- a/index.html
+++ b/index.html
@@ -156,6 +156,13 @@
 
     const updates = [
     { 
+        title: "사소한 일상", 
+        date: "2024년 5월 25일 토요일, 차고 백열등에 도전하다.", 
+        image: "image/brunch/20240525 bulb 1.jpg", 
+        titleLink: "brunch.html", 
+        imageLink: "brunch/diary/brunch sub 20240525_01.html" 
+      },
+    { 
         title: "미국 생활", 
         date: "2024년 5월 20일 미국경찰", 
         image: "image/usa/20240520 Police 1.png", 
