--- a/brunch.html
+++ b/brunch.html
@@ -173,6 +173,7 @@
     <h1>인공지능과 함께 쓰는 일기</h1>
     <div class="title-container">
       <ul>
+        <li><a href="#title23">고장 난 천장 팬을 고치다.</a></li>
         <li><a href="#title22">고장 난 천장 팬을 고치다.</a></li>
         <li><a href="#title21">딸과 함께한 행복한 골프 데이트</a></li>
         <li><a href="#title20">고장 난 포드 에스케이프 헤드라이트 교체하다.</a></li>
@@ -202,6 +203,12 @@
   <main>
     <section>
       <ul>
+        <li id="title23" class="larger-text">
+          <strong>차고 백열등에 도전하다.</strong><br>   
+          <a href="brunch/diary/brunch sub 20240525_01.html" target="_blank"> 2024년5월25일 토요일 일기 바로가기<br><br>
+              <img src="image/brunch/20240525 bulb 1.jpg" alt="차고 백열등" width="100%">
+          </a>
+        </li>
         <li id="title22" class="larger-text">
           <strong>고장 난 천장 팬을 고치다.</strong><br>   
           <a href="brunch/diary/brunch sub 20240513_01.html" target="_blank"> 2024년5월13일 월요일 일기 바로가기<br><br>
