--- a/index.html
+++ b/index.html
@@ -157,6 +157,13 @@
     const updates = [
     { 
         title: "사소한 일상", 
+        date: "2024년 5월 25일 토요일, 금값 추이에 대한 새로운 도메인 등록", 
+        image: "image/brunch/20240525 gold 1.jpg", 
+        titleLink: "brunch.html", 
+        imageLink: "brunch/diary/brunch sub 20240525_02.html" 
+      },
+    { 
+        title: "사소한 일상", 
         date: "2024년 5월 25일 토요일, 차고 백열등에 도전하다.", 
         image: "image/brunch/20240525 bulb 1.jpg", 
         titleLink: "brunch.html", 
