--- a/brunch/diary/brunch sub 20240525_02.html
+++ b/brunch/diary/brunch sub 20240525_02.html
@@ -39,6 +39,15 @@
             이 사이트를 통해 금값의 변동을 보다 쉽게 파악해서 많은 분들에게 도움이 되었으면 좋겠다. 사실 많은 사람들이 인플레이션에 대해서 심각하게 생각하지 않지만, 금값의 변동 차트를 보면 달러 가치의 하락 속도에 대해 깜짝 놀랄 것이다. 나 역시도 깜짝 놀랐다.<br><br>
             인터넷을 통해 다양한 정보를 제공하고, 이를 통해 많은 사람들에게 도움이 되는 것이 큰 보람을 느끼게 한다. 더 나아가, 내가 만든 사이트가 많은 사람들에게 유용하게 사용되길 바란다.<br><br>
 
+            <h2>2024년 5월 27일 월요일, 도메인 등록을 성공하다.</h2>
+            드디어 도메인 등록을 성공했다. 너무 기쁘다. <br><br>
+            <a href="https://thegold.life/" target="_blank">Visit The Gold Life</a><br><br>
+            https://jinnabalu.medium.com/godaddy-domain-with-github-pages-62aed906d4ef의 웹사이트를 참고해서 설정을 수정했다.<br><br>
+            'A' 유형 행에서 IP 주소를 185.199.108.153으로 업데이트합니다. (이 IP 주소는 사용자 도메인을 GitHub 서버에 HTTPS를 통해 연결합니다)<br><br>
+            'CNAME' 행에서 이름이 'www'인 경우 gh-pages 웹사이트 주소(username.github.io)를 입력합니다. 내것은 stberry7.github.io.<br><br>
+            185.199.109.153, 185.199.110.153, 185.199.111.153은 등록을 안해도 잘됨.<br><br>
+            <img src="../../image/brunch/20240527_domain 1" alt="domain 등록" width="100%">
+
         </article>
         <a class="home-button" href="../../brunch.html">Go Back to Brunch Page</a>
     </main>
