--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     }
 
     .update img {
-    width: 100%;
+    width: 1200px;
     max-width: 1200px; /* 최대 폭을 3배로 증가 */
     height: 800px;
     object-fit: cover;
