--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     main {
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
-      padding: 2rem 2rem 2rem 2rem; /* Adjusted padding to align left */
+      align-items: center; /* 가운데 정렬로 변경 */
+      padding: 2rem;
     }
 
     section {
@@ -56,34 +56,22 @@
     .update {
       display: flex;
       flex-direction: column;
-      /* align-items: flex-start; */
-      align-items: center; /* 가운데 정렬 */
-      margin-bottom: 2rem; /* Add margin between updates */
+      align-items: center;
+      margin-bottom: 2rem;
     }
 
     .update img {
-    width: 1200px;
-    max-width: 1200px; /* 최대 폭을 3배로 증가 */
-    height: 800px;
-    object-fit: cover;
-    border-radius: 5px;
-    margin: 1rem 0;
-  }
-
-  @media (max-width: 1024px) {
-    .update img {
-      max-width: 1200px; /* 1024px 이하에서는 최대 폭을 2배로 조정 */
+      width: 100%; /* 기본 폭을 100%로 설정 */
+      max-width: 600px; /* 최대 폭을 600px로 설정 */
+      height: auto; /* 비율에 맞게 자동 조절 */
+      object-fit: cover;
+      border-radius: 5px;
+      margin: 1rem 0;
     }
-  }
-
-  @media (max-width: 768px) {
-    .update img {
-      max-width: 600px; /* 768px 이하에서는 최대 폭을 원래 크기로 조정 */
-    }
-  }
 
     .update-content {
       flex: 1;
+      text-align: center; /* 텍스트 가운데 정렬 */
     }
 
     .update-content h3 {
@@ -111,7 +99,7 @@
     #updates {
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
+      align-items: center;
     }
 
     .loading,
@@ -123,13 +111,13 @@
 
     @media (min-width: 768px) {
       .update img {
-        width: 50%; /* 큰 화면에서의 이미지 크기 조정 */
+        max-width: 80%; /* 768px 이상에서는 최대 폭을 80%로 조정 */
       }
     }
 
     @media (min-width: 1024px) {
       .update img {
-        width: 30%; /* 더 큰 화면에서의 이미지 크기 조정 */
+        max-width: 50%; /* 1024px 이상에서는 최대 폭을 50%로 조정 */
       }
     }
   </style>
@@ -155,86 +143,83 @@
     let isLoading = false;
 
     const updates = [
-    { 
+      { 
         title: "사소한 일상", 
         date: "2024년 5월 25일 토요일, 금값 추이에 대한 새로운 도메인 등록", 
         image: "image/brunch/20240525 gold 1.jpg", 
         titleLink: "brunch.html", 
         imageLink: "brunch/diary/brunch sub 20240525_02.html" 
       },
-    { 
+      { 
         title: "사소한 일상", 
         date: "2024년 5월 25일 토요일, 차고 백열등에 도전하다.", 
         image: "image/brunch/20240525 bulb 1.jpg", 
         titleLink: "brunch.html", 
         imageLink: "brunch/diary/brunch sub 20240525_01.html" 
       },
-    { 
+      { 
         title: "미국 생활", 
         date: "2024년 5월 20일 미국경찰", 
         image: "image/usa/20240520 Police 1.png", 
         titleLink: "usa.html", 
         imageLink: "usa/usa sub 20240520_01.html" 
       },
-    { 
+      { 
         title: "AI News", 
         date: "2024년 5월 20일 Google I/O 2024", 
         image: "image/ai_news/20240520 Google 1.png", 
         titleLink: "AI_News.html", 
         imageLink: "ai_news/news/AI_News sub 20240520_02.html" 
       },
-    { 
+      { 
         title: "AI News", 
         date: "2024년 5월 20일 Chat GPT4o", 
         image: "image/ai_news/20240520 ChatGPT4o 1.png", 
         titleLink: "AI_News.html", 
         imageLink: "ai_news/news/AI_News sub 20240520_01.html" 
       },
-    { 
+      { 
         title: "AI 로봇", 
         date: "2024년 5월 19일 휴머로이드 AI 로봇", 
         image: "image/robot/20240519_robot0.jpg", 
         titleLink: "robot.html", 
         imageLink: "robot/robot sub 20240519_01.html" 
       },
-    { 
+      { 
         title: "미국 생활", 
         date: "2024년 5월 18일 엄청난 물가", 
         image: "image/usa/20240518_livingcost.png", 
         titleLink: "usa.html", 
         imageLink: "usa/usa sub 20240518_03.html" 
       },
-
-    { 
+      { 
         title: "미국 생활", 
         date: "2024년 5월 18일 미친 은 (Silver) 가격", 
         image: "image/usa/20240518_silver.png", 
         titleLink: "usa.html", 
         imageLink: "usa/usa sub 20240518_02.html" 
       },
-
-    { 
+      { 
         title: "미국 생활", 
         date: "2024년 5월 18일 구리가격이 상승하는 이유", 
         image: "image/usa/20240518_copper.png", 
         titleLink: "usa.html", 
         imageLink: "usa/usa sub 20240518_01.html" 
       },
-    { 
+      { 
         title: "미국 생활", 
         date: "2024년 5월 17일 친구에게 돈을 빌려주지 말아야 하는 5가지 이유", 
         image: "image/usa/20240517_money1.png", 
         titleLink: "usa.html", 
         imageLink: "usa/usa sub 20240517_03.html" 
       },
-    { 
+      { 
         title: "미국 생활", 
         date: "2024년 5월 17일 월요일, 세액공제, 공제, 고급 투자 전략 등 세금을 낮추는 방법은 많습니다.", 
         image: "image/usa/20240517_401k.webp", 
         titleLink: "usa.html", 
         imageLink: "usa/usa sub 20240517_02.html" 
       },
-
       { 
         title: "사소한 일상", 
         date: "2024년 5월 13일 월요일, 고장 난 천장 팬을 고치다.", 
@@ -242,8 +227,6 @@
         titleLink: "brunch.html", 
         imageLink: "brunch/diary/brunch sub 20240513_01.html" 
       },
-
-
       { 
         title: "사소한 일상", 
         date: "2024년 5월 12일 일요일, 딸과 함께한 행복한 골프 데이트", 
@@ -251,7 +234,6 @@
         titleLink: "brunch.html", 
         imageLink: "brunch/diary/brunch sub 20240512_02.html" 
       },
-
       { 
         title: "사소한 일상", 
         date: "2024년 5월 12일 일요일, 고장 난 포드 에스케이프 헤드라이트 교체하다.", 
@@ -259,7 +241,6 @@
         titleLink: "brunch.html", 
         imageLink: "brunch/diary/brunch sub 20240512_02.html" 
       },
-
       { 
         title: "사소한 일상", 
         date: "2024년 5월 07일 화요일, 손상된 데크 페인트를 벗겨내다.", 
@@ -267,7 +248,6 @@
         titleLink: "brunch.html", 
         imageLink: "brunch/diary/brunch sub 20240507_01.html" 
       },
-
       { 
         title: "사소한 일상", 
         date: "2024년 5월 04일 토요일, 라일락나무 가지치기를 했더니 앙상해졌다.", 
@@ -275,24 +255,20 @@
         titleLink: "brunch.html", 
         imageLink: "brunch/diary/brunch sub 20240504_02.html" 
       },
-
       { 
         title: "미국 생활", 
-        date: "2020년5월06일 (Harvard Magazine : 미국은 세계에서 가장 높은 수준의 의료비를 지출하고 있습니다.)", 
+        date: "2020년 5월 06일 (Harvard Magazine : 미국은 세계에서 가장 높은 수준의 의료비를 지출하고 있습니다.)", 
         image: "image/usa/20240502_Insurance1.png", 
         titleLink: "usa.html", 
         imageLink: "usa/usa sub 20240502_18.html" 
       },
-
       { 
         title: "사소한 일상", 
-        date: "2024년4월26일 금요일 (나무도 자연 그대로의 멋이 있지 않을까?)", 
+        date: "2024년 4월 26일 금요일 (나무도 자연 그대로의 멋이 있지 않을까?)", 
         image: "image/brunch/20240426 tree.jpg", 
         titleLink: "brunch.html", 
         imageLink: "brunch/diary/brunch sub 20240426_02.html" 
       }
-
-      // ... 더 많은 업데이트 데이터 추가 ...
     ];
 
     function loadUpdates() {
