--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
     }
 
     .update img {
-      width: 800px; /* 최대 폭을 600px로 설정 */
+      width: 100%; /* 기본 폭을 100%로 설정 */
+      max-width: 600px; /* 최대 폭을 600px로 설정 */
       height: auto; /* 비율에 맞게 자동 조절 */
       object-fit: cover;
       border-radius: 5px;
