--- a/brunch/diary/brunch sub 20240525_02.html
+++ b/brunch/diary/brunch sub 20240525_02.html
@@ -133,4 +133,6 @@
     'CNAME' 행에서 이름이 'www'인 경우 gh-pages 웹사이트 주소(username.github.io)를 입력합니다. 내것은 stberry7.github.io.<br><br>
     185.199.109.153, 185.199.110.153, 185.199.111.153은 등록을 안해도 잘됨.<br><br>
 
+
+    중요한 것은 등록을 해놓고 업데이트가 될때까지는 최소 10분정도는 기다려야 제대로 되는것 같다. <br><br>
     <a class="home-button" href="../../brunch.html"> Go Back to Brunch Page</a>
