--- a/english.html
+++ b/english.html
@@ -168,18 +168,15 @@
     표현 목록
    </h2>
 <ul>
-<li>
-<p>
-<strong>
-       Punch Line
-      </strong>
-</p>
 
-<!-- <p style="font-size: 2em;"> -->
-<p>
-      <!-- <img src="./image_english/punch_line.png" alt="Punch Line"> -->
-<img src="image/english/0010.punch_line.png" alt="Punch Line" style="width: 100%;"><br> </p>
-</li>
+<li>
+    <strong>Punch Line</strong><br>   
+    <a href="brunch/english/english sub 20240605_01.html" target="_blank"> <br><br>
+        <img src="image/english/0010.punch_line.png" alt="Punch Line" style="width: 100%;"><br> </p>
+        <!-- <img src="image/brunch/20240525 gold 1.jpg" alt="금값 추이" width="100%"> -->
+    </a>
+  </li>
+
 <li>
 <p>
 <strong>
