--- a/english.html
+++ b/english.html
@@ -171,7 +171,7 @@
 
 <li>
     <strong>Punch Line</strong><br>   
-    <a href="brunch/english/english sub 20240605_01.html" target="_blank"> <br><br>
+    <a href="english/english sub 20240605_01.html" target="_blank"> <br><br>
         <img src="image/english/0010.punch_line.png" alt="Punch Line" style="width: 100%;"><br> </p>
         <!-- <img src="image/brunch/20240525 gold 1.jpg" alt="금값 추이" width="100%"> -->
     </a>
