--- a/english/english sub 20240605_01.html
+++ b/english/english sub 20240605_01.html
@@ -106,13 +106,13 @@
     <style> body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; background-color: #f4f4f4; } header { background-color: #333333; color: #fff; text-align: center; padding: 1rem; } main { margin: 2rem auto; max-width: 1200px; padding: 0 1rem; background-color: #fff; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); border-radius: 5px; padding: 2rem; } h1, h2, h3 { margin-bottom: 1rem; } p { margin-bottom: 1.5rem; } ul, ol { margin-bottom: 1.5rem; padding-left: 2rem; } li { margin-bottom: 0.5rem; } .comparison { margin-bottom: 2rem; } .comparison h2 { border-bottom: 1px solid #ccc; padding-bottom: 0.5rem; } .conclusion { margin-top: 2rem; } .section { margin-bottom: 3rem; } .section h2 { border-bottom: 1px solid #ccc; padding-bottom: 0.5rem; } .subsection { margin-left: 2rem; margin-bottom: 2rem; } </style> </head> <body> 
     <header> <h1>미국 엔지니어들의 영어 표현</h1> </header> 
     <main> 
-        <a class="home-button" href="../../brunch.html"> Go Back to English Page</a>
+        <a class="home-button" href="../../english.html"> Go Back to English Page</a>
         <br><br>
     <section class="section"> 
 
     <strong>Punch Line</strong><br><br>
 
-    <img src="image/english/0010.punch_line.png" alt="Punch Line" style="width: 100%;"><br> </p>
+    <img src="../../image/english/0010.punch_line.png" alt="Punch Line" style="width: 100%;"><br> </p>
     
     비즈니스에서 "펀치라인"이란 제품, 서비스, 또는 브랜드 자체의 본질을 잡아내는 기억에 남는 문구나 문장을 의미합니다. 주로 마케팅과 광고에서 사용되며, 목표 고객을 구매 또는 브랜드를 기억하는 등 원하는 행동으로 유도하는 것을 목표로 합니다.<br><br>
 
