Update english sub 20240605_01.html

--- a/english/english sub 20240605_01.html
+++ b/english/english sub 20240605_01.html
@@ -11,7 +11,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>미국 엔지니어들의 영어표현</title>
+    <title>미국 엔지니어 영어표현</title>
     <meta name="description" content="미국 엔지니어들이 사용하는 영어 표현을 학습하세요. 비즈니스와 마케팅에서 중요한 표현과 예시를 제공합니다.">
     <meta name="keywords" content="영어 표현, 미국 엔지니어, 비즈니스 영어, 마케팅 영어, 펀치라인">
     <meta name="author" content="Your Name">
