Update english sub 20240605_01.html

--- a/english/english sub 20240605_01.html
+++ b/english/english sub 20240605_01.html
@@ -107,7 +107,7 @@
 </head>
 <body>
     <header>
-        <h1>미국 엔지니어들의 영어 표현</h1>
+        <h1>미국 엔지니어 영어 표현</h1>
     </header>
     <main>
         <a class="home-button" href="../../english.html"> Go Back to English Page</a>
