--- a/english.html
+++ b/english.html
@@ -172,20 +172,15 @@
 <li>
     <strong>Punch Line</strong><br>   
     <a href="english/english sub 20240605_01.html" target="_blank"> <br><br>
-        <img src="image/english/0010.punch_line.png" alt="Punch Line" style="width: 100%;"><br> </p>
-    </a>
+        <img src="image/english/0010.punch_line.png" alt="Punch Line" style="width: 100%;"><br> </p></a>
   </li>
 
 <li>
-<p>
-<strong>
-       Heartbreaker
-      </strong>
-</p>
-<p>
-<img src="image/english/0020.heartbreaker.png" alt="Heart Breaker" style="width: 100%;"><br>
-      
-     </p>
+
+<strong> Heartbreaker </strong><br>
+       <a href="english/english sub 20240605_02.html" target="_blank"> <br><br>
+        <img src="image/english/0020.heartbreaker.png" alt="Heartbreaker" style="width: 100%;"><br> </p></a>
+
 </li>
 <li>
 <p>
