--- a/english.html
+++ b/english.html
@@ -171,31 +171,36 @@
 
 <li>
     <strong>Punch Line</strong><br>   
+    비즈니스에서 "펀치라인"이란 제품, 서비스, 또는 브랜드 자체의 본질을 잡아내는 기억에 남는 문구나 문장을 의미합니다.
     <a href="english/english sub 20240605_01.html" target="_blank"> <br><br>
         <img src="image/english/0010.punch_line.png" alt="Punch Line" style="width: 100%;"><br> </p></a>
   </li>
 
 <li>
 
-<strong> Heartbreaker </strong><br>
+    <strong> Heartbreaker </strong><br>
+    "Heartbreaker"는 영어에서 사용되는 표현으로, 긍정적이지 않은 의미를 갖습니다.
        <a href="english/english sub 20240605_02.html" target="_blank"> <br><br>
         <img src="image/english/0020.heartbreaker.png" alt="Heartbreaker" style="width: 100%;"><br> </p></a>
 
 </li>
 <li>
     <strong> I Got Your Back </strong><br>
+    'I got your back'는 '나는 너를 도와줄게' 또는 '나는 너를 지지하고 뒷받침할게'라는 의미의 표현입니다.
     <a href="english/english sub 20240605_03.html" target="_blank"> <br><br>
      <img src="image/english/0030.igotyourback_00.png" alt="I Got Your Back" style="width: 100%;"><br> </p></a>
 
 </li>
 <li>
     <strong> Square Away </strong><br>
+    "Square away"는 영어에서 사용되는 구어 표현으로, 무언가를 마무리하거나 정리하고 준비하는 것을 의미합니다. 
     <a href="english/english sub 20240605_04.html" target="_blank"> <br><br>
      <img src="image/english/0040.square_away_00.png" alt="Square Away" style="width: 100%;"><br> </p></a>
 
 </li>
 <li>
     <strong> Call Out </strong><br>
+    "Square away"는 영어에서 사용되는 구어 표현으로, 무언가를 마무리하거나 정리하고 준비하는 것을 의미합니다.
     <a href="english/english sub 20240605_05.html" target="_blank"> <br><br>
      <img src="image/english/0050.call_out.png" alt="Call Out" style="width: 100%;"><br> </p></a>
 </li>
@@ -207,76 +212,91 @@
 </li>
 <li>
     <strong> Buy off </strong><br>
+    buy-off는 우리말로 승인하다, 확인하다 정도의 뜻입니다.
     <a href="english/english sub 20240605_07.html" target="_blank"> <br><br>
      <img src="image/english/0070.buyoff_00.png" alt="buyoff " style="width: 100%;"><br> </p></a>
 </li>
 
 <li> <strong> Pick on </strong><br>
+    "Pick on someone"은 누군가를 지적하거나 비난하는 것을 뜻합니다.
     <a href="english/english sub 20240605_08.html" target="_blank"> <br><br>
      <img src="image/english/0080.pickon_00.png" alt="pickon" style="width: 100%;"><br> </p></a>
 </li>
 <li>
     <strong> Cadence </strong><br>
+    'Cadence'는 일정한 리듬이나 속도 의미입니다.
     <a href="english/english sub 20240605_09.html" target="_blank"> <br><br>
      <img src="image/english/0090.cadence_00.png" alt="cadence " style="width: 100%;"><br> </p></a>
 </li>
 <li>
     <strong> Flesh out</strong><br>
+    "Flesh out"은 영어에서 "상세히 설명하다" 또는 "자세히 계획하다"라는 의미의 구어 표현입니다.
     <a href="english/english sub 20240605_10.html" target="_blank"> <br><br>
      <img src="image/english/0100.flesh_out_00.png" alt="flesh_out" style="width: 100%;"><br> </p></a>
 </li>
 <li>
     <strong> I am not going to sweat it</strong><br>
+    "I am not gonna to sweat it"은 영어에서 사용되는 구어 표현으로, '걱정하지 않을 것이다', '너무 신경 쓰지 않을 것이다', '너무 걱정하지 않을 것이다' 등과 유사한 의미를 가지고 있습니다.
     <a href="english/english sub 20240605_11.html" target="_blank"> <br><br>
      <img src="image/english/0110.iamnotgoingtosweatit_00.png" alt="iamnotgoingtosweatit" style="width: 100%;"><br> </p></a>
 </li>
 <li>
     <strong> Cobble together </strong><br>
+    'cobble together'는 '여러 가지를 모아서 서투르게 만들다'라는 의미의 표현입니다.
     <a href="english/english sub 20240605_12.html" target="_blank"> <br><br>
      <img src="image/english/0120.cobble_together_00.png" alt="cobble_together" style="width: 100%;"><br> </p></a>
 </li>
 <li>
     <strong> Balm </strong><br>
+    "밤(balm)"은 일반적으로 피부에 바르는 제품으로, 주로 피부를 진정시키거나 보호하는데 사용됩니다.
     <a href="english/english sub 20240605_13.html" target="_blank"> <br><br>
      <img src="image/english/0130.balm_00.png" alt="balm" style="width: 100%;"><br> </p></a>
 </li>
 <li>
     <strong> Reconcile </strong><br>
+    "Reconcile"은 다양한 맥락에서 사용되는 동사로, 주로 두 가지 다른 것 또는 개념을 조정하거나 조화시키는 행위를 의미합니다.
     <a href="english/english sub 20240605_14.html" target="_blank"> <br><br>
      <img src="image/english/0140.reconcile_00.png" alt="reconcile" style="width: 100%;"><br> </p></a>
 </li>
 <li>
     <strong> Musical chairs </strong><br>
+    비즈니스에서 'musical chairs'는 보통 조직 내부의 잦은 인사 움직임을 비유적으로 이르는 말로 사용됩니다
     <a href="english/english sub 20240605_15.html" target="_blank"> <br><br>
      <img src="image/english/0150.musical_chairs_00.png" alt="musical_chairs" style="width: 100%;"><br> </p></a>
 </li>
 <li>
     <strong> Caveat </strong><br>
+    caveat는 '주의사항'이나 '유보사항'을 뜻하는 말입니다.
     <a href="english/english sub 20240605_16.html" target="_blank"> <br><br>
      <img src="image/english/0160.caveat_00.png" alt="caveat" style="width: 100%;"><br> </p></a>
 </li>
 <li>
     <strong> Rhetorical question </strong><br>
+    "Rhetorical question"은 답변이나 정보를 얻기 위해 묻는 것이 아니라, 주장을 강조하거나 문장의 효과를 내기 위해 사용되는 종류의 질문입니다.
     <a href="english/english sub 20240605_17.html" target="_blank"> <br><br>
      <img src="image/english/0170.rhetorical question _00.png" alt="rhetorical question " style="width: 100%;"><br> </p></a>
 </li>
 <li>
     <strong> Rat hole </strong><br>
+    비즈니스 또는 투자의 맥락에서 "rathole"은 돈이나 자원이 낭비되는 상황을 가리키는 비유적인 표현입니다.
     <a href="english/english sub 20240605_18.html" target="_blank"> <br><br>
      <img src="image/english/0180.rathole_00.png" alt="rathole" style="width: 100%;"><br> </p></a>
 </li>
 <li>
-    <strong> Goofy to me </strong><br>G
+    <strong> Goofy to me </strong><br>
+    "A little goofy to me"는 비격식적인 영어 표현으로, 누군가나 무언가가 약간 우스꽝스럽거나 웃긴 느낌을 주는 것을 나타냅니다.
     <a href="english/english sub 20240605_19.html" target="_blank"> <br><br>
      <img src="image/english/0190.goofy_to_me_00.png" alt="goofy_to_me" style="width: 100%;"><br> </p></a>
 </li>
 <li>
     <strong> Potato quality </strong><br>
+    "Potato quality"는 영어에서 사용되는 비격식적인 표현으로, 사진, 비디오 또는 기타 미디어 콘텐츠의 품질이 매우 낮거나 부족한 상태를 묘사하는 용어입니다. 
     <a href="english/english sub 20240605_20.html" target="_blank"> <br><br>
      <img src="image/english/0200.potato_quality_00.png" alt="potato_quality" style="width: 100%;"><br> </p></a>
 </li>
 <li>
     <strong> Gibber</strong><br>
+    'gibber'는 '무의미한 말을 더듬거리다'는 뜻이 있고, 이를 바탕으로 한 gibberish는 혼란스러운 말이나 문장을 뜻하는 말입니다.
     <a href="english/english sub 20240605_21.html" target="_blank"> <br><br>
      <img src="image/english/0210.gibber_00.png" alt="gibber" style="width: 100%;"><br> </p></a>
 </li>
@@ -287,16 +307,19 @@
 </li>
 <li>
     <strong> Under the bus </strong><br>
+    "Throw under the bus"는 영어 표현으로, 누군가를 어려운 상황에서 혼자 책임을 지도록 내몰거나 희생시키는 것을 의미합니다.
     <a href="english/english sub 20240605_23.html" target="_blank"> <br><br>
      <img src="image/english/0230.under_the_bus_00.png" alt="under_the_bus" style="width: 100%;"><br> </p></a>
 </li>
 <li>
     <strong> Head start</strong><br>
+    'a head start'는 '선취약점을 가지다'라는 의미의 표현입니다. 보통 경쟁 상황에서 한쪽이 상대방에 비해 앞서 있는 위치나 이점을 뜻합니다.
     <a href="english/english sub 20240605_24.html" target="_blank"> <br><br>
      <img src="image/english/0240.head_start_00.png" alt="head_start" style="width: 100%;"><br> </p></a>
 </li>
 <li>
     <strong> Trolling </strong><br>
+    인터넷에서 사용되는 용어로, 다른 사람들을 고의적으로 성가시게 하거나 분노를 유발하는 행동을 가리킵니다.
     <a href="english/english sub 20240605_25.html" target="_blank"> <br><br>
      <img src="image/english/0250.trolling_00.png" alt="trolling" style="width: 100%;"><br> </p></a>
 </li>
