--- a/english.html
+++ b/english.html
@@ -611,13 +611,13 @@
 
 <p><strong>Low-Hanging Fruit</strong></p>
 <p>
-    <img src="image/english/0260.Low_Hang_Fruit_00.png" alt="Low Hangiong Fruit" style="width: 100%;"><br>
+    <img src="image/english/0260.low_hanging_fruits_00.png" alt="Low Hangiong Fruit" style="width: 100%;"><br>
         "Low-hanging fruit"는 쉽게 얻을 수 있는 기회나 달성 가능한 목표를 의미하는 비유적 표현입니다. 이 표현은 주로 비즈니스, 마케팅, 전략 기획 등에서 자주 사용됩니다.<br>
     </p>
 
 <p><strong>First Come, First Served</strong></p>
 <p>
-    <img src="image/english/0270.First_Come_First_Served_00.png" alt="" style="width: 100%;"><br>
+    <img src="image/english/0270.first_come_first_serve_00.png" alt="FCFC" style="width: 100%;"><br>
         "First come, first served"는 먼저 온 사람이 먼저 서비스를 받는다는 의미의 표현입니다. 이 표현은 일상 생활과 다양한 상황에서 많이 사용되며, 특히 고객 서비스, 이벤트, 한정 판매 등에서 매우 유용합니다. 아래에서 이 표현이 어떻게 사용되는지 살펴보겠습니다.<br>
     </p>
 
