--- a/english.html
+++ b/english.html
@@ -243,6 +243,7 @@
      </strong>
 </p>
 <p>
+    <img src="image/english/0055.Malleable_00.png" alt="Call Out" style="width: 100%;"><br>
      "Malleable"은 영어에서 사용되는 형용사로, "펴기 쉬운" 또는 "성급하게 형태를 바꿀 수 있는"이라는 의미를 갖습니다. 이 표현은 주로 물리적 물질에 대해 사용되지만, 비유적으로도 사용될 수 있습니다.<br>
 
                     물리적으로 "malleable"한 물질은 압력이나 외력에 의해 비교적 쉽게 펴지거나 형태가 바뀔 수 있는 속성을 가지고 있습니다. 가장 일반적인 예로는 금속이 있습니다. 금속은 높은 온도에서 특히 용접 작업이나 미끄럽게 하기 위해 흔히 가열된 후 펴지기 쉬운 물질로 알려져 있습니다.<br>
@@ -550,6 +551,7 @@
      </strong>
 </p>
 <p>
+    <img src="image/english/0220.Personal_Priviledge_00.png" alt="Personal Priviledge" style="width: 100%;"><br>
      물가 인상과 관련된 정책을 논의하는 회의가 진행 중이라고 가정해봅시다. 참가자들은 이에 대해 다양한 의견을 제시하고 논의를 진행하고 있습니다. 이때, 한 참가자가 "personal privilege"을 요청합니다.<br>
 
                     그 참가자가 "personal privilege"을 요청하는 이유는, 자신이 물가 인상으로 인해 경제적으로 어려움을 겪고 있기 때문입니다. <br>
