--- a/english.html
+++ b/english.html
@@ -119,6 +119,22 @@
     to {opacity: 0;}
 }
   </style>
+
+<style>
+    img {
+        max-width: 80%;
+        height: auto;
+        margin: 0 auto;
+        display: block;
+    }
+
+    @media screen and (min-width: 768px) {
+        img {
+            max-width: 60%;
+        }
+    }
+</style>
+
 </head>
 <!-- <body style="font-size: 2em;"><div class="sidebar" style="left: -200px; transition: left 2s;">
 <a href="english.html">
