--- a/brunch.html
+++ b/brunch.html
@@ -36,7 +36,7 @@
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       border-radius: 5px;
       padding: 2rem;
-      font-size: 32px;
+      font-size: 18px;
     }
 
     @media screen and (max-width: 600px) {
@@ -160,12 +160,8 @@
     94.44% { transform: translateY(-20.4em); }
     100% { transform: translateY(-21.6em); }
   }
-
-  .larger-text {
-    font-size: 1.5em;
-  }
-
 </style>
+    </style>
 </head>
 <body>
   <header>
@@ -173,30 +169,6 @@
     <h1>인공지능과 함께 쓰는 일기</h1>
     <div class="title-container">
       <ul>
-        <li><a href="#title24">금값 추이에 대한 새로운 도메인 등록</a></li>
-        <li><a href="#title23">차고 백열등에 도전하다.</a></li>
-        <li><a href="#title22">고장 난 천장 팬을 고치다.</a></li>
-        <li><a href="#title21">딸과 함께한 행복한 골프 데이트</a></li>
-        <li><a href="#title20">고장 난 포드 에스케이프 헤드라이트 교체하다.</a></li>
-        <li><a href="#title19">손상된 데크 페인트를 벗겨내다.</a></li>
-        <li><a href="#title18">라일락나무 가지치기를 했더니 앙상해졌다.</a></li>
-        <li><a href="#title17">큰애 대학교 졸업식이 있는 날이다</a></li>
-        <li><a href="#title16">잔디 일병 구하기</a></li>
-        <li><a href="#title15">10년이 넘게 우리와 함께하고 있는 우리가족의 첫번째 차</a></li>
-        <li><a href="#title14">개미 통로를 막아라.</a></li>
-        <li><a href="#title13">지붕에서 떨어질뻔 하다.</a></li>
-        <li><a href="#title12">아내가 방충망을 고친다.</a></li>
-        <li><a href="#title11">골프치기 좋은 날</a></li>
-        <li><a href="#title10">추억의 붕어빵</a></li>
-        <li><a href="#title9">나무도 자연 그대로의 멋이 있지 않을까?</a></li>
-        <li><a href="#title8">아내가 술을 마신다</a></li>
-        <li><a href="#title7">골프 공 속살이 궁금하다.</a></li>
-        <li><a href="#title6">골프 네트가 썰렁하다.</a></li>
-        <li><a href="#title5">딸이 집에 왔다</a></li>
-        <li><a href="#title4">뱀과 메리의 사랑?</a></li>
-        <li><a href="#title3">꽃봉우리.. 봄이다..</a></li>
-        <li><a href="#title2">삼성 세탁기 설치</a></li>
-        <li><a href="#title1">골프 (Fox Hills Classic)</a></li>
       </ul>
       <button class="show-all-button">전체보기</button> <!-- 전체보기 버튼 추가 -->
     </div>
@@ -204,170 +176,164 @@
   <main>
     <section>
       <ul>
-        <li id="title24" class="larger-text">
-          <strong>금값 추이에 대한 새로운 도메인 등록</strong><br>   
-          <a href="brunch/diary/brunch sub 20240525_02.html" target="_blank"> 2024년5월25일 토요일 일기 바로가기<br><br>
-              <img src="image/brunch/20240525 gold 1.jpg" alt="금값 추이" width="100%">
-          </a>
-        </li>
-        <li id="title23" class="larger-text">
-          <strong>차고 백열등에 도전하다.</strong><br>   
-          <a href="brunch/diary/brunch sub 20240525_01.html" target="_blank"> 2024년5월25일 토요일 일기 바로가기<br><br>
-              <img src="image/brunch/20240525 bulb 1.jpg" alt="차고 백열등" width="100%">
-          </a>
-        </li>
-        <li id="title22" class="larger-text">
-          <strong>고장 난 천장 팬을 고치다.</strong><br>   
-          <a href="brunch/diary/brunch sub 20240513_01.html" target="_blank"> 2024년5월13일 월요일 일기 바로가기<br><br>
-              <img src="image/brunch/20240513_fan3.jpg" alt="천장 팬 타이틀" width="100%">
-          </a>
+
+
+
+        <li id="title19">
+          <h3>흥청망청 인터넷 가계부</h3>    
+                  <a href="brunch/diary/brunch sub 20241228_01.html" target="_blank"> 2024년12월28일 토요일 일기 바로가기<br><br>
+                      <img src="image/brunch/20241228_Tracker_01.png" alt="2024년12월28일 토토요일 일기 바로가기" width="100%">
+                  </a>
+              </li>
+
+
+        <li id="title19">
+          <h3>손상된 데크 페인트를 벗겨내다.</h3>    
+                  <a href="brunch/diary/brunch sub 20240507_01.html" target="_blank"> 2024년5월07일 화요일 일기 바로가기<br><br>
+                      <img src="image/brunch/20240507_deck1.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
+                  </a>
+              </li>
+
+        <li id="title18">
+        <h3>라일락나무 가지치기를 했더니 앙상해졌다.</h3>    
+                <a href="brunch/diary/brunch sub 20240504_02.html" target="_blank"> 2024년5월04일 토요일 일기 바로가기<br><br>
+                    <img src="image/brunch/20240504_tree2.png" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
+                </a>
+            </li>
+
+        <li id="title17">
+        <h3>큰애 대학교 졸업식이 있는 날이다</h3>    
+                <a href="brunch/diary/brunch sub 20240504_01.html" target="_blank"> 2024년5월04일 토요일 일기 바로가기<br><br>
+                    <img src="image/brunch/20240504_grad2.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
+                </a>
+
+        <li id="title16"></li>
+        <h3>잔디 일병 구하기</h3>    
+                <a href="brunch/diary/brunch sub 20240502_01.html" target="_blank"> 2024년5월02일 목요일 일기 바로가기<br><br>
+                    <img src="image/brunch/20240502_grass.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
+                </a>
+
+        <li id="title15">
+        <h3>10년이 넘게 우리와 함께하고 있는 우리가족의 첫번째 차</h3>    
+                <a href="brunch/diary/brunch sub 20240501_03.html" target="_blank"> 2024년5월01일 수요일 일기 바로가기<br><br>
+                    <img src="image/brunch/20240501_ford.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
+                </a>
+
+
+        <li id="title14"></li>
+        <h3>개미 통로를 막아라.</h3>    
+                <a href="brunch/diary/brunch sub 20240501_02.html" target="_blank"> 2024년5월01일 수요일 일기 바로가기<br><br>
+                    <img src="image/brunch/20240501_tile1.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
+                </a>
+
+
+        <li id="title13"></li>
+        <h3>지붕에서 떨어질뻔 하다.</h3>    
+                <a href="brunch/diary/brunch sub 20240501_01.html" target="_blank"> 2024년5월01일 수요일 일기 바로가기<br><br>
+                    <img src="image/brunch/20240501_roof.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
+                </a>
+            </li>
+
+        <li id="title12">
+        <h3>아내가 방충망을 고친다.</h3>    
+                <a href="brunch/diary/brunch sub 20240429_01.html" target="_blank"> 2024년4월29일 월요일 일기 바로가기<br><br>
+                    <img src="image/brunch/20240429_bug.jpg" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
+                </a>
+            </li>
+
+        <li id="title11">
+        <h3>골프치기 좋은 날</h3>    
+                <a href="brunch/diary/brunch sub 20240427_01.html" target="_blank"> 2024년4월27일 토요일 일기 바로가기<br><br>
+                    <img src="image/brunch/20240427_golfcourse.jpeg" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
+                </a>
+            </li>
+
+        <li id="title10">
+        <h3>추억의 붕어빵</h3>    
+                <a href="brunch/diary/brunch sub 20240426_03.html" target="_blank"> 2024년4월26일 금요일 일기 바로가기<br><br>
+                    <img src="image/brunch/20240426 fish.jpg" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
+                </a>
+            </li>
+
+        <li id="title9">
+        <h3>나무도 자연 그대로의 멋이 있지 않을까?</h3>    
+        <h3>업데이트 : 나무가 초라해져버렸다</h3>    
+                <a href="brunch/diary/brunch sub 20240426_02.html" target="_blank"> 2024년4월26일 금요일 일기 바로가기<br><br>
+                    <img src="image/brunch/20240426 tree.jpg" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
+                </a>
+            </li>
+
+        <li id="title8">
+        <h3>아내가 술을 마신다</h3>    
+                <a href="brunch/diary/brunch sub 20240426_01.html" target="_blank"> 2024년4월26일 금요일 일기 바로가기<br><br>
+                    <img src="image/brunch/wine1.png" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
+                </a>
+            </li>
+
+        <li id="title7">
+                <h3>
+            골프 공 속살이 궁금하다.
+            </h3>    
+                <a href="brunch/diary/brunch sub 20240425_03.html" target="_blank"> 2024년4월24일 수요일 일기 바로가기<br><br>
+                    <img src="image/brunch/golfballinside1.jpg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
+                </a>
+            </li>
+
+        <li id="title6">
+        <h3>
+            골프 네트가 썰렁하다.
+            </h3>    
+                <a href="brunch/diary/brunch sub 20240425_02.html" target="_blank"> 2024년4월24일 수요일 일기 바로가기<br><br>
+                    <img src="image/brunch/golfnet1.jpeg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
+                </a>
+            </li>
+
+        <li id="title5">
+        <h3>
+            딸이 집에 왔다
+            </h3>    
+                <a href="brunch/diary/brunch sub 20240425_01.html" target="_blank"> 2024년4월24일 수요일 일기 바로가기<br><br>
+                    <img src="image/brunch/bluebag1.jpeg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
+                </a>
+            </li>
+
+        <li id="title4">
+        <h3>
+            뱀과 메리의 사랑?
+            </h3>
+
+                <a href="brunch/diary/brunch sub 0004.html" target="_blank"> 2024년4월24일 수요일 일기 바로가기<br><br>
+                    <img src="image/brunch/snake.jpeg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
+                </a>
+            </li>
+
+        <li id="title3">
+                <h3>
+            꽃봉우리.. 봄이다..
+            </h3>
+
+                <a href="brunch/diary/brunch sub 0003.html" target="_blank"> 2024년4월23일 화요일 일기 바로가기<br><br>
+                    <img src="image/brunch/babyflower.jpg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
+                </a>
+            </li>
+
+        <li id="title2">
+        <h3>
+            삼성 세탁기 설치 
+            </h3>
+            
+            <a href="brunch/diary/brunch sub 0002.html" target="_blank"> 2024년4월22일 월요일 일기 바로가기<br><br>
+                <img src="image/brunch/washer.jpg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
+            </a>
         </li>
 
-        <li id="title21" class="larger-text">
-          <strong>딸과 함께한 행복한 골프 데이트</strong><br>  
-          <a href="brunch/diary/brunch sub 20240512_02.html" target="_blank"> 2024년5월12일 일요일 일기 바로가기<br><br>
-              <img src="image/brunch/20240512_golf.jpg" alt="딸과 함께한 행복한 골프 데이트" width="100%">
-          </a>
-        </li>
-
-        <li id="title20" class="larger-text">
-          <strong>고장 난 포드 에스케이프 헤드라이트 교체하다.</strong><br>  
-          <a href="brunch/diary/brunch sub 20240512_01.html" target="_blank"> 2024년5월12일 일요일 일기 바로가기<br><br>
-              <img src="image/brunch/20240512_lamp1.jpg" alt="포드 에스케이프 헤드라이트" width="100%">
-          </a>
-        </li>
-
-        <li id="title19" class="larger-text">
-          <strong>손상된 데크 페인트를 벗겨내다.</strong><br>  
-          <a href="brunch/diary/brunch sub 20240507_01.html" target="_blank"> 2024년5월07일 화요일 일기 바로가기<br><br>
-              <img src="image/brunch/20240507_deck1.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
-          </a>
-        </li>
-
-        <li id="title18" class="larger-text">
-          <strong>라일락나무 가지치기를 했더니 앙상해졌다.</strong><br>   
-          <a href="brunch/diary/brunch sub 20240504_02.html" target="_blank"> 2024년5월04일 토요일 일기 바로가기<br><br>
-              <img src="image/brunch/20240504_tree2.png" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
-          </a>
-        </li>
-
-        <li id="title17" class="larger-text">
-          <strong>큰애 대학교 졸업식이 있는 날이다</strong><br>  
-          <a href="brunch/diary/brunch sub 20240504_01.html" target="_blank"> 2024년5월04일 토요일 일기 바로가기<br><br>
-              <img src="image/brunch/20240504_grad2.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
-          </a>
-        </li>
-
-        <li id="title16" class="larger-text">
-          <strong>잔디 일병 구하기</strong><br>  
-          <a href="brunch/diary/brunch sub 20240502_01.html" target="_blank"> 2024년5월02일 목요일 일기 바로가기<br><br>
-              <img src="image/brunch/20240502_grass.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
-          </a>
-        </li>
-
-        <li id="title15" class="larger-text">
-          <strong>10년이 넘게 우리와 함께하고 있는 우리가족의 첫번째 차</strong><br>  
-          <a href="brunch/diary/brunch sub 20240501_03.html" target="_blank"> 2024년5월01일 수요일 일기 바로가기<br><br>
-              <img src="image/brunch/20240501_ford.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
-          </a>
-        </li>
-
-        <li id="title14" class="larger-text">
-          <strong>개미 통로를 막아라.</strong><br>  
-          <a href="brunch/diary/brunch sub 20240501_02.html" target="_blank"> 2024년5월01일 수요일 일기 바로가기<br><br>
-              <img src="image/brunch/20240501_tile1.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
-          </a>
-        </li>
-
-        <li id="title13" class="larger-text">
-          <strong>지붕에서 떨어질뻔 하다.</strong><br>  
-          <a href="brunch/diary/brunch sub 20240501_01.html" target="_blank"> 2024년5월01일 수요일 일기 바로가기<br><br>
-              <img src="image/brunch/20240501_roof.jpg" alt="2024년5월01일 수요일 일기 바로가기" width="100%">
-          </a>
-        </li>
-
-        <li id="title12" class="larger-text">
-          <strong>아내가 방충망을 고친다.</strong><br>  
-          <a href="brunch/diary/brunch sub 20240429_01.html" target="_blank"> 2024년4월29일 월요일 일기 바로가기<br><br>
-              <img src="image/brunch/20240429_bug.jpg" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
-          </a>
-        </li>
-
-        <li id="title11" class="larger-text">
-          <strong>골프치기 좋은 날</strong><br>  
-          <a href="brunch/diary/brunch sub 20240427_01.html" target="_blank"> 2024년4월27일 토요일 일기 바로가기<br><br>
-              <img src="image/brunch/20240427_golfcourse.jpeg" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
-          </a>
-        </li>
-
-        <li id="title10" class="larger-text">
-          <strong>추억의 붕어빵</strong><br>  
-          <a href="brunch/diary/brunch sub 20240426_03.html" target="_blank"> 2024년4월26일 금요일 일기 바로가기<br><br>
-              <img src="image/brunch/20240426 fish.jpg" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
-          </a>
-        </li>
-
-        <li id="title9" class="larger-text">
-          <strong>나무도 자연 그대로의 멋이 있지 않을까?</strong><br>  
-          <a href="brunch/diary/brunch sub 20240426_02.html" target="_blank"> 2024년4월26일 금요일 일기 바로가기<br><br>
-              <img src="image/brunch/20240426 tree.jpg" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
-          </a>
-        </li>
-
-        <li id="title8" class="larger-text">
-          <strong>아내가 술을 마신다</strong><br>  
-          <a href="brunch/diary/brunch sub 20240426_01.html" target="_blank"> 2024년4월26일 금요일 일기 바로가기<br><br>
-              <img src="image/brunch/wine1.png" alt="2024년4월25일 목요일 일기 바로가기" width="100%">
-          </a>
-        </li>
-
-        <li id="title7" class="larger-text">
-          <strong>딸과 함께한 행복한 골프 데이트</strong><br>  
-          <a href="brunch/diary/brunch sub 20240425_03.html" target="_blank"> 2024년4월24일 수요일 일기 바로가기<br><br>
-              <img src="image/brunch/golfballinside1.jpg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
-          </a>
-        </li>
-
-        <li id="title6" class="larger-text">
-          <strong>골프 네트가 썰렁하다.</strong><br>  
-          <a href="brunch/diary/brunch sub 20240425_02.html" target="_blank"> 2024년4월24일 수요일 일기 바로가기<br><br>
-              <img src="image/brunch/golfnet1.jpeg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
-          </a>
-        </li>
-
-        <li id="title5" class="larger-text">
-          <strong>딸이 집에 왔다</strong><br>  
-          <a href="brunch/diary/brunch sub 20240425_01.html" target="_blank"> 2024년4월24일 수요일 일기 바로가기<br><br>
-              <img src="image/brunch/bluebag1.jpeg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
-          </a>
-        </li>
-
-        <li id="title4" class="larger-text">
-          <strong>뱀과 메리의 사랑?</strong><br>  
-          <a href="brunch/diary/brunch sub 0004.html" target="_blank"> 2024년4월24일 수요일 일기 바로가기<br><br>
-              <img src="image/brunch/snake.jpeg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
-          </a>
-        </li>
-
-        <li id="title3" class="larger-text">
-          <strong>꽃봉우리.. 봄이다..</strong><br>  
-          <a href="brunch/diary/brunch sub 0003.html" target="_blank"> 2024년4월23일 화요일 일기 바로가기<br><br>
-              <img src="image/brunch/babyflower.jpg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
-          </a>
-        </li>
-
-        <li id="title2" class="larger-text">
-          <strong>삼성 세탁기 설치</strong><br>  
-          <a href="brunch/diary/brunch sub 0002.html" target="_blank"> 2024년4월22일 월요일 일기 바로가기<br><br>
-              <img src="image/brunch/washer.jpg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
-          </a>
-        </li>
-
-        <li id="title1" class="larger-text">
-          <strong>골프 (Fox Hills Classic)</strong><br>  
-          <a href="brunch/diary/brunch sub 0001.html" target="_blank"> 2024년4월21일 일요일 일기 바로가기<br><br>
-              <img src="image/brunch/foxhills.jpg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
-          </a>
+        <li id="title1">
+        <h3>
+            골프 (Fox Hills Classic)
+        
+            <a href="brunch/diary/brunch sub 0001.html" target="_blank"> 2024년4월21일 일요일 일기 바로가기<br><br>
+                <img src="image/brunch/foxhills.jpg" alt="2024년4월24일 수요일 일기 바로가기" width="100%">
+            </a>
         </li>
 
         <!-- ... (생략) ... -->
