--- a/index.html
+++ b/index.html
@@ -181,8 +181,11 @@
         <div class="sidebar-row">
             <a href="brunch.html">소소한 일상</a>
         </div>
-        <div class="sidebar-row">
+        <!-- <div class="sidebar-row">
             <a href="pamyo.html">소설</a>
+        </div> -->
+        <div class="sidebar-row">
+            <a href="economy.html">미국 경기</a>
         </div>
         <div class="sidebar-row">
             <a href="usa.html">미국생활</a>
