--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <a href="python.html">파이선</a>
         </div>
         <div class="sidebar-row">
-            <a href="vba.html">엑셀 VBA</a>
+            <a href="golf.html">골프분석</a>
         </div>
     </div>
     <div class="content">
