--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <a href="battery.html">배터리</a>  
         </div>
         <div class="sidebar-row">  
-            <a href="python.html">파이선</a>
+            <a href="fund.html">헤지펀드</a>
         </div>
         <div class="sidebar-row">
             <a href="golf.html">골프분석</a>
