--- a/fund.html
+++ b/fund.html
@@ -775,9 +775,39 @@
                 font-size: 16px;
             }
         }
+
+        .homepage-btn {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            background: #007bff;
+            color: white;
+            border: none;
+            padding: 12px 20px;
+            border-radius: 25px;
+            font-size: 14px;
+            font-weight: 600;
+            text-decoration: none;
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            box-shadow: 0 4px 12px rgba(0,123,255,0.3);
+            transition: all 0.3s ease;
+            z-index: 1000;
+            cursor: pointer;
+        }
+
+        .homepage-btn:hover {
+            background: #0056b3;
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(0,123,255,0.4);
+        }
     </style>
 </head>
 <body>
+    <a href="https://stberry.us/" class="homepage-btn" target="_blank">
+        🏠 홈페이지
+    </a>
     <div class="container">
         <div class="header">
             <h1>📈 Hedge Fund Investment Tracker</h1>
