--- a/index.html
+++ b/index.html
@@ -178,24 +178,24 @@
         <div class="sidebar-row">
             <a href="english.html">영어표현</a>
         </div>
-        <div class="sidebar-row">
+        <!-- <div class="sidebar-row">
             <a href="brunch.html">소소한 일상</a>
-        </div>
+        </div> -->
         <!-- <div class="sidebar-row">
             <a href="pamyo.html">소설</a>
         </div> -->
         <div class="sidebar-row">
             <a href="economy.html">미국 경기</a>
         </div>
-        <div class="sidebar-row">
+        <!-- <div class="sidebar-row">
             <a href="usa.html">미국생활</a>
         </div>
         <div class="sidebar-row">
             <a href="AI_Sites.html">인공지능 사이트</a>
-        </div>
-        <div class="sidebar-row">
+        </div> -->
+        <!-- <div class="sidebar-row">
             <a href="battery.html">배터리</a>  
-        </div>
+        </div> -->
         <div class="sidebar-row">  
             <a href="fund.html">헤지펀드</a>
         </div>
