--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <a href="pamyo.html">소설</a>
         </div> -->
         <div class="sidebar-row">
-            <a href="economy.html">미국 경기</a>
+            <a href="economy.html">Economy Indicator</a>
         </div>
         <!-- <div class="sidebar-row">
             <a href="usa.html">미국생활</a>
@@ -197,10 +197,10 @@
             <a href="battery.html">배터리</a>  
         </div> -->
         <div class="sidebar-row">  
-            <a href="fund.html">헤지펀드</a>
+            <a href="fund.html">Hedge fund report</a>
         </div>
         <div class="sidebar-row">
-            <a href="golf.html">골프분석</a>
+            <a href="golf.html">Golf Analysis</a>
         </div>
     </div>
     <div class="content">
@@ -320,4 +320,5 @@
         </script>
     </body>
     </html></document_content>
+
     </document>
