--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </style>
     <div class="sidebar" style="left: 0; transition: left 2s;">
         <div class="sidebar-row">
-            <a href="english.html">영어표현</a>
+            <a href="english.html">English</a>
         </div>
         <!-- <div class="sidebar-row">
             <a href="brunch.html">소소한 일상</a>
@@ -322,3 +322,4 @@
     </html></document_content>
 
     </document>
+
