--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!DOCTYPE html>
     <html lang="ko">
     <meta charset="utf-8"/>
-    <title>미국생활 영어표현 인공지능 배터리</title>
+    <title>Economy Indicator</title>
     <style>
        body {
                 font-family: Arial, sans-serif;
@@ -176,7 +176,7 @@
     </style>
     <div class="sidebar" style="left: 0; transition: left 2s;">
         <div class="sidebar-row">
-            <a href="english.html">영어표현</a>
+            <a href="english.html">English</a>
         </div>
         <!-- <div class="sidebar-row">
             <a href="brunch.html">소소한 일상</a>
@@ -185,7 +185,7 @@
             <a href="pamyo.html">소설</a>
         </div> -->
         <div class="sidebar-row">
-            <a href="economy.html">미국 경기</a>
+            <a href="economy.html">Economic Indicator</a>
         </div>
         <!-- <div class="sidebar-row">
             <a href="usa.html">미국생활</a>
@@ -197,10 +197,10 @@
             <a href="battery.html">배터리</a>  
         </div> -->
         <div class="sidebar-row">  
-            <a href="fund.html">헤지펀드</a>
+            <a href="fund.html">Hedge Fund</a>
         </div>
         <div class="sidebar-row">
-            <a href="golf.html">골프분석</a>
+            <a href="golf.html">Golf Analysis</a>
         </div>
     </div>
     <div class="content">
