--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@
         <div class="sidebar-row">
             <a href="economy.html">Economic Indicator</a>
         </div>
-        <!-- <div class="sidebar-row">
-            <a href="usa.html">미국생활</a>
+        <div class="sidebar-row">
+            <a href="cd.html">CD Rate</a>
         </div>
         <div class="sidebar-row">
-            <a href="AI_Sites.html">인공지능 사이트</a>
-        </div> -->
+            <a href="mortage.html">Mortage</a>
+        </div>
         <!-- <div class="sidebar-row">
             <a href="battery.html">배터리</a>  
         </div> -->
