--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <a href="cd.html">CD Rate</a>
         </div>
         <div class="sidebar-row">
-            <a href="mortage.html">Mortage</a>
+            <a href="mortgage.html">Mortgage</a>
         </div>
         <!-- <div class="sidebar-row">
             <a href="battery.html">배터리</a>  
@@ -320,4 +320,5 @@
         </script>
     </body>
     </html></document_content>
+
     </document>
