--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
         <div class="sidebar-row">
             <a href="english.html">English</a>
         </div>
-        <!-- <div class="sidebar-row">
-            <a href="brunch.html">소소한 일상</a>
-        </div> -->
+        <div class="sidebar-row">
+            <a href="brunch.html">Brunch</a>
+        </div>
         <!-- <div class="sidebar-row">
             <a href="pamyo.html">소설</a>
         </div> -->
@@ -198,6 +198,18 @@
         </div> -->
         <div class="sidebar-row">  
             <a href="fund.html">Hedge Fund</a>
+        </div>
+        <div class="sidebar-row">
+            <a href="AI_Sites.html">AI Site</a>
+        </div>
+        <div class="sidebar-row">
+            <a href="battery.html">Battery</a>  
+        </div>
+        <div class="sidebar-row">  
+            <a href="python.html">Python</a>
+        </div>
+        <div class="sidebar-row">
+            <a href="vba.html">Excel VBA</a>
         </div>
         <div class="sidebar-row">
             <a href="golf.html">Golf Analysis</a>
